feature-eng done

--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -220,20 +220,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to /home/madhav/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to C:\\Users\\Parth\n",
+      "[nltk_data]     Hanchate\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/madhav/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to C:\\Users\\Parth\n",
+      "[nltk_data]     Hanchate\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to /home/madhav/nltk_data...\n",
+      "[nltk_data] Downloading package wordnet to C:\\Users\\Parth\n",
+      "[nltk_data]     Hanchate\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package omw-1.4 to /home/madhav/nltk_data...\n",
+      "[nltk_data] Downloading package omw-1.4 to C:\\Users\\Parth\n",
+      "[nltk_data]     Hanchate\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
     },
@@ -243,7 +247,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
